[package]
name = "toronto-covid"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4"

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.19"
